methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: not found: value estSurBaggle
  while (!estSurBaggle()){     
          ^